	  variables, such as $? and $@. (Benno Schulenberg)
	- Tweak the "nanorc" regexes to color keywords bright green
	  instead of cyan, and comments bright blue instead of blue.
	  (John M. Gabriele)
	- Simplify the extensions associated with the "nanorc" regexes.
	  (DLR)
	- Add regexes for Ruby. (John M. Gabriele, minor tweaks by DLR)
- doc/nanorc.nanorc:
	- Tweak the "nanorc" regexes to color comments starting with a
	  double ## cyan instead of bright blue. (John M. Gabriele)
- doc/sh.nanorc:
	- Tweak the regex for special variables, moving "-" to the end,
	  to avoid excessive coloring or an "Invalid range end" error.
	  (Benno Schulenberg)
- src/Makefile.am:
	- If we're uninstalling, remove the "rnano" symlink. (DLR, found
	  by Benno Schulenberg)
	- Remove "-Iintl" from INCLUDES, as we don't use an intl
	  directory inside the source directory anymore. (DLR)
- TODO:
	- Update for nano 2.0, since we're now in a feature freeze.
	  (DLR)
- UPGRADE:
	- Miscellaneous minor fixes. (DLR)
	- Update for nano 2.0, since we're now in a feature freeze.
	  (DLR)

GNU nano 1.3.11 - 2006.03.30
- General:
	- Miscellaneous comment fixes. (DLR)
	- Remove unnecessary #ifdef around termios.h #include in nano.c.
	  (DLR)
	- Sort the default strings for brackets and punct, and the "or"
	  atom in the default regex string for quotestr, according to
	  ASCII.  Changes to main(), nano.1, nanorc.5, and
	  nanorc.sample. (DLR)
	- Rework the bracket searching code to handle multibyte bracket
	  characters, and allow specifying matching bracket characters
	  other than the default via the "matchbrackets" rcfile option.
	  New functions mbstrpbrk() and mbrevstrpbrk(); changes to
	  find_statusbar_bracket_match(), do_statusbar_find_bracket(),
	  find_bracket_match(), do_find_bracket(), main(),
	  parse_rcfile(), nanorc.5, and nanorc.sample. (DLR)
	- Rework input parsing in the file browser to be more flexible.
	  New function parse_browser_input(); changes to do_browser().
	  (DLR)