@@ -1,6 +1,6 @@
 ## Here is an example for manpages.
 ##
-syntax "manpage" "\.[1-9]x?$"
+syntax "man" "\.[1-9]x?$"
 color green "\.(S|T)H.*$"
 color brightgreen "\.(S|T)H" "\.TP"
 color brightred "\.(BR?|I[PR]?).*$"
